styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    font-family: Roboto, sans-serif;
    display: flex;
    flex-direction: column;
}
.hero-box,
footer {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 32px;
}
.hero-box,
.footer-box {
    background-color: #1F2937;
}

.hero-box nav,
.hero-box .hero,
.content-box .content,
.quote-box .quote,
.action-box .action,
.footer-box footer {
    width: 40%;
}

.hero-box nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 120px;
}
.hero-box nav #logo {
    font-size: 24px;
    color: #F9FAF8;
    text-decoration: none;
    font-weight: bold;
}
.hero-box nav #links ul {
    display: flex;
    gap: 20px;
}
.hero-box nav #links a,
.hero-box .hero .text p,
.hero-box .hero .text button {
    font-size: 18px;
    color: #E5E7EB;
}

.hero-box nav #links li {
    list-style: none;
}
.hero-box nav #links a {
    text-decoration: none;
}

.hero-box .hero {
    flex: 1;
    display: flex;
    gap: 50px;
    margin-bottom: 100px;
}
.hero-box .hero .text {
    flex: 1;   
}
.hero-box .hero button {
    background-color: #3882F6;
    padding: 7px 30px;
    border: 0;
    border-radius: 10px;
    font-weight: 600;
}
.hero-box .hero .text p {
    margin-bottom: 20px;
}
.hero-box .hero .text h1 {
    font-size: 48px;
    font-weight: 900;
    color: #F9FAF8;
    margin-bottom: 20px;
}
.hero-box .hero img {
    flex: 1;
    width: 500px;
    max-height: 250px;
    height: auto;
    object-fit: cover;
}

.content-box {
    display: flex;
    flex: 1;
    flex-direction: column;
    align-items: center;
    margin-top: 70px;
    gap: 10px;
}
.content-box .content {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 50px;
    margin-bottom: 50px;
}

.content-box .content h2 {
    font-size: 36px;
    color: #1F2937;
    font-weight: 900;
}

.content-box .content .info-box {
    display: flex;
    gap: 50px;
    flex-wrap: wrap;
    margin-bottom: 100px;
}

.content-box .content .info-box .box {
    flex: 1;
    display: flex;
    flex-direction: column;
    align-items: center;
}
.content-box .content .info-box .box #outline {
    flex: 1 0 auto;
    width: 200px;
    height: 200px;
    border: 5px solid #3882F6 ;
    border-radius: 30px;
    margin-bottom: 10px;
}
.content-box .content .info-box .box p {
    text-align: center;
    font-size: 18px;
    padding: 10px;
    font-weight: lighter;
}


.quote-box {
    background-color: #E5E7EB;
    display: flex;
    flex: 1;
    flex-direction: column;
    align-items: center;
    
}
.quote {
    display: flex;
    flex-direction: column;
    padding: 120px 200px;
    
    
}

.quote .body {
    font-size: 36px;
    font-style: italic;
    font-weight: lighter;
    color: #1f2937;
    margin-bottom: 10px;
}
.quote .author {
    font-weight: bold;
    font-size: 24px;
    margin-left: auto;
}

.action-box {
    display: flex;
    flex: 1;
    flex-direction: column;
    align-items: center;
}

.action-box .action {
    margin: 150px 0px;
    background-color: #3882F6;
    border-radius: 15px;
    padding: 50px 50px;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-between;
    gap: 50px
}
.action-box .action .text h3 {
    font-size: 28px;
    color: #F9FAF8;
    margin-bottom: 5px;
}
.action-box .action .text p {
    font-size: 120%;
    color: #F9FAF8;
    font-weight: lighter;
}

.action-box .action button {
    border: 2px solid #F9FAF8;
    border-radius: 10px;
    background-color: transparent;
    padding: 10px 40px;
    color: #F9FAF8;
    font-weight: bold;
    font-size: 20px;
}

.footer-box {
    display: flex;
    flex: 1;
    flex-direction: column;
    align-items: center;
}
.footer-box p {
    padding: 50px;
    color: #F9FAF8;
}

